Add requirements with prequ

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,3 +47,22 @@ skip=migrations,doc,build,shuup_product_variations_tests,node_modules
 not_skip=__init__.py
 wrap_length=79
 diff=True
+
+[prequ]
+annotate = yes
+
+requirements-dev =
+    flake8<5
+    isort<5
+    prequ
+
+requirements-test =
+    pytest>=5,<6
+    mock
+    pytest-cov
+    pytest-django==3.9.0
+    flake8<5
+    isort<5
+    beautifulsoup4<5
+
+    -e .
